--- a/Browse.css
+++ b/Browse.css
@@ -94,9 +94,12 @@
 }
 
 #speciesList li:hover {
-  /*background-color: #d7d7d7;*/
   background-color: #d7d7d7;
 }
+ #speciesList ul li:hover {
+   /*background-color: #d7d7d7;*/
+   background-color: #f5f5f5;
+ }
  #speciesList ul li ul li:hover {
    background-color: #e0e0e0;
  }
